run Livebook directly from source.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "Livebook Dev Container",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "livebook",
-	"workspaceFolder": "/data",
+	"workspaceFolder": "/home/vscode",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -18,11 +18,11 @@
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or with the host. 
-	"forwardPorts": [8080, 8081]
+	"forwardPorts": [8080, 8081],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "mix deps.get"
 
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	"remoteUser": "vscode"
 }
