--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,8 +4,11 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
+        VARIANT: "jammy-20240911.1"
         # Elixir Version: 1.9, 1.10, 1.10.4, ...
-        VARIANT: "1.17.3-erlang-27.2-ubuntu-focal-20241011"
+        ELIXIR_VERSION: '1.17.3'
+        ELIXIR_OTP_RELEASE: '27'
+        OTP_VERSION: '27.2'
         # Livebook Version
         LIVEBOOK_VERSION: "v0.14.5"
     environment:
