--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        VARIANT: "jammy-20240911.1"
+        VARIANT: "ubuntu-22.04"
         # Elixir Version: 1.9, 1.10, 1.10.4, ...
         ELIXIR_VERSION: '1.17.3'
         ELIXIR_OTP_RELEASE: '27'
